[metadata]
name  =  AceCE
version  =  attr: AceCE.__version__
author  = Fengyu Xie
author_email  =  fengyu_xie@berkeley.edu
maintainer = Fengyu Xie
maintainer_email = fengyu_xie@berkeley.edu
url = https://cedergrouphub.github.io/AceCE
license = Modified BSD
license_file = LICENSE
description =
    An automated workflow implementation of cluster expansion in crystalline solids based on Atomate2, Jobflow and smol.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://cedergrouphub.github.io/AceCE
    Code = https://github.com/CederGroupHub/AceCE
    Issue tracker = https://github.com/CederGroupHub/AceCE/issues

[options]
packages = find:
python_requires = >=3.8
setup_requires = numpy>=1.20; setuptools; setuptools_scm
install_requires =
    setuptools
    numpy >=1.23
    pymatgen >=2022.3.24
    monty >=v2022.9.8
    pyyaml>=6.0
    joblib>=1.2.0
    smol>=0.3.0
    sparse-lm>=0.3.0
    sympy>=1.11.1
    jobflow>=0.1.9
    atomate2>=0.0.8
    scikit-learn>=1.2.0
    scipy>=1.10.0
    pydantic>=1.10.2
    polytope>=0.2.3
    cvxpy>=1.2.1
    cvxopt>=1.3.0

[options.extras_require]
docs =
    sphinx >= 5.3
    pydata-sphinx-theme >=0.12.0
    ipython >=8.2.0
    nbsphinx >=0.8.10
    nbsphinx-link >=1.3.0
    nb2plots >=0.6.1
tests =
    pytest >=7.2.0
    pytest-cov >=4.0.0
    coverage
dev =
    pre-commit >=2.12.1
    cython >=0.29.32
    flake8
    pycodestyle
    pydocstyle
    pylint
    black
    isort
optional =
    h5py >=3.6.0
    gurobipy

[tool:pytest]
addopts  =  -x --durations = 30 --quiet -rxXs --color = yes
filterwarnings  =
    ignore::UserWarning
    ignore::FutureWarning
    ignore::RuntimeWarning

[flake8]
exclude  =  docs,tests
extend-ignore  =  E203, E501
max-line-length  =  88

[pycodestyle]
exclude = docs
count  =  True
statistics  =  True
ignore  =  E203, W503
max-line-length  =  88

[pylint.basic]
good-names  =  id, kB, i, j, k, f

[pylint.messages control]
disable  =  W0511, R0904, R0903, R0913, R0902, R0914, C0415,

[codespell]
skip = *.c,./.*
count =
quiet-level = 3
ignore-words-list = nd,tread,titel
